# AIGP

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  README_CN.md  SECURITY.md  VERSION  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: spec-change.yml
.github/workflows/: validate.yml
adrs/: README.md  adr-001-disk-verify-then-decide.md  adr-002-plan-artifact-boundary.md  adr-003-hash-locked-report-evidence.md  adr-004-content-architecture-binding.md  adr-005-high-risk-human-gate.md  adr-006-untrusted-plan-input-model.md  adr-007-ainp-project-package-layout.md  adr-008-report-hash-lock-discipline.md  adr-009-release-mode-gate-design.md  adr-010-redline-constraints-require-enforced-by.md  adr-011-unverifiable-is-not-a-pass-credential.md  adr-012-ainp-with-aiap-creator.md
docs/: index.md  specification.md
docs_cn/: index.md
examples/: README.md
schemas/: ainp-generation-space-v1.0.0.schema.json  ainp-generation-v1.0.0.schema.json  ainp-generationfeedback-v1.0.0.schema.json  ainp-generationreport-v1.0.0.schema.json  ainp-reference-manifest-v1.0.0.schema.json  high_risk_types-v1.0.0.schema.json  high_risk_types.v1.0.0.json
scripts/: release_check.ps1
specification/: AINP_Protocol.md  AINP_Protocol_cn.md  schemas.md  schemas_cn.md
tests/: README.md  test_ainp.py
tools/: README.md  __init__.py  ainp.py  ainp_project_check.py  ainp_public.py  ainp_rehash.py  ainp_release_check.py  ainp_report_check.py  ainp_validate.py  check_doc_sync.py  check_markdown_links.py
(+100 files in other folders)
